# hackathon2

./: db.sqlite3  pyproject.toml  requirements.txt
API/: admin.py  models.py  serializers.py  urls.py  views.py
API/migrations/: 0001_initial.py  0002_alter_instituteevent_created_date_review.py  0003_customuser.py  0004_delete_customuser.py  0005_institute_city_or_reg_institute_possessiveness_and_more.py  0006_delete_document_delete_language_and_more.py
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_contractors_remove_review_image_alter_review_rating_and_more.py  0003_delete_profile_delete_review.py  0004_remove_streets_contractor_delete_contractors_and_more.py  0005_initial.py  0006_alter_profile_avatar_alter_profile_phone_number.py
chat/: admin.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
drf/: middleware.py  settings.py  urls.py
